--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.8.1
 click==8.1.3
 Flask==2.2.2
+Flask-Cors==3.0.10
 Flask-HTTPAuth==4.7.0
 Flask-JWT-Extended==4.4.4
 Flask-Login==0.6.2
@@ -14,6 +15,7 @@ Mako==1.2.2
 MarkupSafe==2.1.1
 PyJWT==2.5.0
 PyMySQL==1.0.2
+six==1.16.0
 SQLAlchemy==1.4.41
 Werkzeug==2.2.2
 zipp==3.8.1
